@@ -176,7 +176,7 @@ bool
 serd_env_qualify(const SerdEnv* const  env,
                  const SerdNode* const uri,
                  SerdNode* const       prefix,
-                 SerdChunk* const      suffix)
+                 SerdStringView* const suffix)
 {
   for (size_t i = 0; i < env->n_prefixes; ++i) {
     const SerdNode* const prefix_uri = &env->prefixes[i].uri;
@@ -195,8 +195,8 @@ serd_env_qualify(const SerdEnv* const  env,
 SerdStatus
 serd_env_expand(const SerdEnv* const  env,
                 const SerdNode* const curie,
-                SerdChunk* const      uri_prefix,
-                SerdChunk* const      uri_suffix)
+                SerdStringView* const uri_prefix,
+                SerdStringView* const uri_suffix)
 {
   const char* const colon =
     (const char*)memchr(curie->buf, ':', curie->n_bytes + 1);
@@ -228,8 +228,8 @@ serd_env_expand_node(const SerdEnv* const env, const SerdNode* const node)
     return serd_node_new_uri_from_node(node, &env->base_uri, &ignored);
   }
   case SERD_CURIE: {
-    SerdChunk prefix;
-    SerdChunk suffix;
+    SerdStringView prefix;
+    SerdStringView suffix;
     if (serd_env_expand(env, node, &prefix, &suffix)) {
       return SERD_NODE_NULL;
     }
